[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vagflasher"
version = "0.1.0"
description = "Open-source VAG ECU/TCU flash tool — ME17 / MED9 / ME7 / EDC17. No cloud. No subscriptions."
readme = "README.md"
license = {text = "GPL-3.0"}
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9",
    "rich>=13",
    "click>=8.1",
]

[project.optional-dependencies]
can     = ["python-can>=4.3", "aioisotp>=0.1"]
dev     = ["pytest", "pytest-asyncio", "ruff==0.15.10"]
all     = ["vagflasher[can]"]

[project.scripts]
vagflasher = "vagflasher.cli:main"

[tool.setuptools.packages.find]
include = ["vagflasher*"]

[tool.ruff]
target-version = "py310"
line-length = 100
[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501", "E741", "UP015"]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
